--- a/templates/answer.html
+++ b/templates/answer.html
@@ -8,36 +8,24 @@
 
 <body>
     <header>
-        Your movie Recommender
+        <h1>Your Movie Recommender</h1>
     </header>
-    <form method="post">
-        <div class="question">
-            <p>What type of movie do you want to watch ? </p>
-            <ul style="list-style: None;">
-                <li>
-                    <label>
-                        <input type="radio" id="1" name="answer" value="Action">
-                        Action </label>
-                </li>
-                <li>
-                    <label>
-                        <input type="radio" id="2" name="answer" value="Horror">
-                        Horror </label>
-                </li>
-                <li>
-                    <label>
-                        <input type="radio" id="3" name="answer" value="Comedy">
-                        Comedy </label>
-                </li>
-                <li>
-                    <label>
-                        <input type="radio" id="4" name="answer" value="SCience-fiction">
-                        Science-fiction </label>
-                </li>
-            </ul>
-        </div>
-        <button type="submit"> Submit </button>
-    </form>
+    <div class="recommendation">
+        <table>
+            <tr>
+                {% for header in headings %}
+                <th> {{ header }}</th>
+                {% endfor %}
+            </tr>
+            {%for row in data%}
+            <tr>
+                {%for cell in row %}
+                <td> {{ cell }} </td>
+                {% endfor %}
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>
 
 </html>
