--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
+    <script src="static/js/functions.js"></script>
     <header>
-        Your movie Recommender
+        <h1>Your Movie Recommender</h1>
     </header>
     <form method="post">
         <div class="question">
@@ -16,22 +17,26 @@
             <ul style="list-style: None;">
                 <li>
                     <label>
-                        <input type="radio" id="1" name="answer" value="Action">
+                        <input type="checkbox" id="1" name="answer" value="Action"
+                            onclick="selectOnlyThis(this.id, 1, 4)">
                         Action </label>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" id="2" name="answer" value="Horror">
+                        <input type="checkbox" id="2" name="answer" value="Horror"
+                            onclick="selectOnlyThis(this.id, 1 ,4)">
                         Horror </label>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" id="3" name="answer" value="Comedy">
+                        <input type="checkbox" id="3" name="answer" value="Comedy"
+                            onclick="selectOnlyThis(this.id, 1, 4)">
                         Comedy </label>
                 </li>
                 <li>
                     <label>
-                        <input type="radio" id="4" name="answer" value="SCience-fiction">
+                        <input type="checkbox" id="4" name="answer" value="Science-fiction"
+                            onclick="selectOnlyThis(this.id, 1 ,4)">
                         Science-fiction </label>
                 </li>
             </ul>
