--- a/templates/answer.html
+++ b/templates/answer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="/static/css/styles.css" rel="stylesheet" />
+    <link href="static/css/answer.css" rel="stylesheet" />
 </head>
 
 <body>
