--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     </header>
     <form method="post">
         <div class="question">
-            <p>What type of movie do you want to watch ? </p>
+            <p class="questionToUser">What type of movie do you want to watch ?</p>
             <ul style="list-style: None;">
                 <li>
                     <label>
