--- a/templates/home.html
+++ b/templates/home.html
@@ -17,29 +17,29 @@
             <ul style="list-style: None;">
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick1"/>
-                        <input type="checkbox" class="checkbox" id="1" name="answer" value="Action" onclick="selectOnlyThis(this.id, 1, 4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q1" value="Action" onclick="showTick(this)">
                         Action
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick2"/>
-                        <input type="checkbox" class="checkbox" id="2" name="answer" value="Horror" onclick="selectOnlyThis(this.id, 1 ,4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q1" value="Horror" onclick="showTick(this)">
                         Horror
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick3"/>
-                        <input type="checkbox" class="checkbox" id="3" name="answer" value="Comedy" onclick="selectOnlyThis(this.id, 1, 4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q1" value="Comedy" onclick="showTick(this)">
                         Comedy
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick4"/>
-                        <input type="checkbox" class="checkbox" id="4" name="answer" value="Science-fiction" onclick="selectOnlyThis(this.id, 1 ,4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q1" value="Science-fiction" onclick="showTick(this)">
                         Science-fiction
                     </label>
                 </li>
@@ -50,29 +50,29 @@
             <ul style="list-style: None;">
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick1"/>
-                        <input type="checkbox" class="checkbox" id="1" name="answer" value="Action" onclick="selectOnlyThis(this.id, 1, 4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q2" value="Action" onclick="showTick(this)">
                         Harrison Ford
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick2"/>
-                        <input type="checkbox" class="checkbox" id="2" name="answer" value="Horror" onclick="selectOnlyThis(this.id, 1 ,4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q2" value="Horror" onclick="showTick(this)">
                         Jennifer Lawrence
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick3"/>
-                        <input type="checkbox" class="checkbox" id="3" name="answer" value="Comedy" onclick="selectOnlyThis(this.id, 1, 4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q2" value="Comedy" onclick="showTick(this)">
                         Robin Williams
                     </label>
                 </li>
                 <li>
                     <label>
-                        <img src="static/imgs/check.png" id="tick4"/>
-                        <input type="checkbox" class="checkbox" id="4" name="answer" value="Science-fiction" onclick="selectOnlyThis(this.id, 1 ,4)">
+                        <img src="static/imgs/check.png" class="tick"/>
+                        <input type="radio" class="radio" name="Q2" value="Science-fiction" onclick="showTick(this)">
                         Emilia Clarke
                     </label>
                 </li>
