--- a/static/css/home.css
+++ b/static/css/home.css
@@ -21,15 +21,19 @@ body {
     font-family: "inter";
 }
 
-/*Title*/
+/*
+Title
+*/
 header {
     text-align: center;
     color: white;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
-/*Questions*/
+/*
+Questions
+*/
 form {
     display: flex;
     flex-direction: column;
@@ -40,29 +44,30 @@ div.question-block {
     text-align: center;
     color: white;
     background-color: rgb(41, 39, 39);
-    border-radius: 3px;
+    border-radius: 10px;
     width: 70%;
-    margin-top: 40px;
     margin-bottom: 40px;
 }
 
-div.question-block p { /* La question à poser */
-    font-size: 1.5em;
+div.question-block p { /* A question to ask */
+    font-size: 1.2em;
+    height: 400%;
 }
 
 div.question-block ul {
     border: 1px solid grey;
-    border-radius: 3px;
+    border-radius: 10px;
     padding: 0px;
+    margin: 0px;
+    height: 80%;
 }
 
 div.question-block li {
-    height: 100%;
     margin-left: 0px;
 }
 
 div.question-block li:hover {
-    background-color:  rgb(90, 86, 86);
+    background-color: rgb(90, 86, 86);
 }
 
 div.question-block label {
@@ -72,7 +77,10 @@ div.question-block label {
     padding-bottom: 10px;
     padding-left: 60px;
     font-size: 1em;
-    
+}
+
+div.question-block label:hover {
+    cursor: pointer;
 }
 
 div.question-block input[type=radio] {
@@ -97,8 +105,12 @@ form button {
     text-align: center;
     width: 20%;
     font-size: 1.1em;
-    height: 40px;
-    border: 2px solid white;
-    border-radius: 5px;
-    
+    height: 50px;
+    border: 1px solid grey;
+    border-radius: 5px; 
+}
+
+form button:hover {
+    background-color: rgb(90, 86, 86); 
+    cursor: pointer;
 }
