Add a red border around unanswered questions when submitting

--- a/templates/home.html
+++ b/templates/home.html
@@ -144,7 +144,7 @@
                 </li>
             </ul>
         </div>
-        <button type="submit" onsubmit="checkSubmission(this)">Find me movies!</button>
+        <button type="submit" onclick="checkSubmission(this);">Find me movies!</button>
     </form>
 </body>
 
