Add folder experiments in .gitignore.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -31,9 +31,7 @@ header {
     margin-bottom: 60px;
 }
 
-/*
-Questions
-*/
+/*Questions*/
 form {
     display: flex;
     flex-direction: column;
@@ -49,9 +47,9 @@ div.question-block {
     margin-bottom: 40px;
 }
 
-div.question-block p { /* A question to ask */
-    font-size: 1.2em;
-    height: 400%;
+div.question-block p {
+    /* La question à poser */
+    font-size: 1.5em;
 }
 
 div.question-block ul {
@@ -88,7 +86,10 @@ div.question-block input[type=radio] {
     margin-left: 10px;
 }
 
-img.tick {
+#tick1,
+#tick2,
+#tick3,
+#tick4 {
     width: 2%;
     height: 2%;
     margin-right: 15px;
@@ -105,12 +106,7 @@ form button {
     text-align: center;
     width: 20%;
     font-size: 1.1em;
-    height: 50px;
-    border: 1px solid grey;
-    border-radius: 5px; 
-}
-
-form button:hover {
-    background-color: rgb(90, 86, 86); 
-    cursor: pointer;
+    height: 40px;
+    border: 2px solid white;
+    border-radius: 5px;
 }
