--- a/static/css/answer.css
+++ b/static/css/answer.css
@@ -2,26 +2,30 @@
 Specify the style of answer page.
 */
 
+@font-face {
+    font-family: "inter";
+    src: url("fonts/inter/inter-regular.ttf");
+}
+
 body {
-    background: url("/static/imgs/cinema.jpg") no-repeat center center fixed;
+    background: url("/static/imgs/cinema_blur.jpg") no-repeat center center fixed;
     background-size: cover;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    font-family: "inter";
 }
 
 /*Title*/
 header {
     text-align: center;
     color: white;
-    margin-bottom: 10px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 /*Recommendations (output)*/
 div.recommendation {
     color: white;
-    width: 50%
+    width: 50%;
+    display: none;
 }
 
 div.recommendation table {
@@ -38,4 +42,35 @@ div.recommendation table {
     text-align: center;
     padding: 5px;
     border: 2px solid white;
+}
+
+#return_home_button {
+    background-color: rgb(41, 39, 39);
+    color: white;
+    text-align: center;
+    width: 20%;
+    font-size: 1.1em;
+    height: 35px;
+    border: 1px solid grey;
+    border-radius: 5px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    margin: auto;
+    padding-top: 13px;
+}
+
+#return_home_button:hover {
+    background-color: rgb(90, 86, 86);
+}
+
+#main_answer_block, #same_actor_block, #same_genre_block {
+    border: 1px solid rgb(90, 86, 86);
+    border-radius: 10px;
+    width: 70%;
+    height: 400px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
