feat: add static elements for the merry-go-round

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -27,14 +27,84 @@
             {% endfor %}
         </table>
     </div>
+        
     <div id="main_answer_block">
-
+        <p class="reco-block-title">According to your research:</p>
+        <div class="carroussel-container">
+            <div class="left-swift">
+                <img src="static/imgs/left-arrow.png" class="carroussel-arrow"/>
+            </div>
+            <div class="left-display">
+                <p class="title-carroussel">Title A1</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="center-display">
+                <p class="title-carroussel">Title A2</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-display">
+                <p class="title-carroussel">Title A3</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-swift">
+                <img src="static/imgs/right-arrow.png" class="carroussel-arrow"/>
+            </div>
+        </div>
     </div>
     <div id="same_actor_block">
-
+        <p class="reco-block-title">With the same actor:</p>
+        <div class="carroussel-container">
+            <div class="left-swift">
+                <img src="static/imgs/left-arrow.png" class="carroussel-arrow"/>                
+            </div>
+            <div class="left-display">
+                <p class="title-carroussel">Title B1</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="center-display">
+                <p class="title-carroussel">Title B2</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-display">
+                <p class="title-carroussel">Title B3</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-swift">
+                <img src="static/imgs/right-arrow.png" class="carroussel-arrow"/>
+            </div>
+        </div>
     </div>
     <div id="same_genre_block">
-
+        <p class="reco-block-title">On the same genre:</p> 
+        <div class="carroussel-container">
+            <div class="left-swift">
+                <img src="static/imgs/left-arrow.png" class="carroussel-arrow"/>
+            </div>
+            <div class="left-display">
+                <p class="title-carroussel">Title C1</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="center-display">
+                <p class="title-carroussel">Title C2</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-display">
+                <p class="title-carroussel">Title C3</p>
+                <img src="" class="img-carroussel"/>
+                <p class="abstract-carroussel">Abstract</p>
+            </div>
+            <div class="right-swift">
+                <img src="static/imgs/right-arrow.png" class="carroussel-arrow"/>
+            </div>
+        </div>
     </div>
     <a id="return_home_button" href="{{ url_for('home') }}">
         Bring me home!
