--- a/static/css/answer.css
+++ b/static/css/answer.css
@@ -66,11 +66,105 @@ div.recommendation table {
 }
 
 #main_answer_block, #same_actor_block, #same_genre_block {
-    border: 1px solid rgb(90, 86, 86);
+    /* border: 1px solid white; */
     border-radius: 10px;
-    width: 70%;
-    height: 400px;
+    width: 85%;
+    height: 450px;
     margin: auto;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+}
+
+.reco-block-title {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 40px;
+    height: 10%;
+    font-size: 1.1em;
+    text-align: center;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: rgb(40, 40, 51);
+    padding-top: 20px;
+}
+
+.carroussel-container {
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-swift {
+    height: 50%;
+    width: 4%;
+    margin-top: 75px;
+    background-color:  rgb(90, 86, 86);
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+}
+
+.right-swift {
+    height: 50%;
+    width: 4%;
+    margin-top: 75px;
+    background-color:  rgb(90, 86, 86);
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    padding-left: 3px;
+    
+}
+
+.left-display {
+    height: 100%;
+    width: 25%;
+    border-radius: 10px;
+    background-color: rgb(90, 86, 86);
+    filter: blur(5px);
+}
+
+.center-display {
+    height: 100%;
+    width: 25%;
+    border-radius: 10px;
+    background-color: rgb(90, 86, 86);
+}
+
+.right-display {
+    height: 100%;
+    width: 25%;
+    border-radius: 10px;
+    background-color: rgb(90, 86, 86);
+    filter: blur(5px);
+}
+
+.right-swift:hover, .left-swift:hover {
+    background-color:  rgb(131, 125, 125);
+}
+
+.carroussel-arrow {
+    height: 20px;
+    width: 20px;
+    margin: auto;
+}
+
+.body-carroussel {
+    display: flex;
+}
+
+.title-carroussel {
+    color: white;
+    text-align: center;
+}
+
+.abstract-carroussel {
+    color: white;
+    text-align: justify;
+    padding: 5px;
 }
