--- a/templates/answer.html
+++ b/templates/answer.html
@@ -14,7 +14,7 @@
     <div id="main_answer_block">
         <p class="reco-block-title">According to your research:</p>
         <div class="carroussel-container">
-            <div class="left-swift" onclick="leftRound(this);">
+            <div class="left-swift" onclick="leftRound1();">
                 <img src="static/imgs/left-arrow.png" class="carroussel-arrow" />
             </div>
             <div class="panel-display" style="filter: blur(5px);">
@@ -32,7 +32,7 @@
                 <img src="" class="img-carroussel" />
                 <p class="abstract-carroussel"></p>
             </div>
-            <div class="right-swift" onclick="rightRound(this);">
+            <div class="right-swift" onclick="rightRound1();">
                 <img src="static/imgs/right-arrow.png" class="carroussel-arrow" />
             </div>
         </div>
@@ -40,7 +40,7 @@
     <div id="same_actor_block">
         <p class="reco-block-title">With the same actor:</p>
         <div class="carroussel-container">
-            <div class="left-swift" onclick="leftRound(this);">
+            <div class="left-swift" onclick="leftRound2();">
                 <img src="static/imgs/left-arrow.png" class="carroussel-arrow" />
             </div>
             <div class="panel-display" style="filter: blur(5px);">
@@ -58,7 +58,7 @@
                 <img src="" class="img-carroussel" />
                 <p class="abstract-carroussel"></p>
             </div>
-            <div class="right-swift" onclick="rightRound(this);">
+            <div class="right-swift" onclick="rightRound2();">
                 <img src="static/imgs/right-arrow.png" class="carroussel-arrow" />
             </div>
         </div>
@@ -66,7 +66,7 @@
     <div id="same_genre_block">
         <p class="reco-block-title">On the same genre:</p>
         <div class="carroussel-container">
-            <div class="left-swift" onclick="leftRound(this);">
+            <div class="left-swift" onclick="leftRound3();">
                 <img src="static/imgs/left-arrow.png" class="carroussel-arrow" />
             </div>
             <div class="panel-display" style="filter: blur(5px);">
@@ -84,7 +84,7 @@
                 <img src="" class="img-carroussel" />
                 <p class="abstract-carroussel"></p>
             </div>
-            <div class="right-swift" onclick="rightRound(this);">
+            <div class="right-swift" onclick="rightRound3();">
                 <img src="static/imgs/right-arrow.png" class="carroussel-arrow" />
             </div>
         </div>
