--- a/static/css/answer.css
+++ b/static/css/answer.css
@@ -128,6 +128,12 @@ header {
     text-align: center;
 }
 
+.duration-carroussel {
+    color: white;
+    text-align: justify;
+    padding: 10px;
+}
+
 .abstract-carroussel {
     color: white;
     text-align: justify;
