--- a/templates/answer.html
+++ b/templates/answer.html
@@ -19,17 +19,17 @@
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="right-swift" onclick="rightRound1();">
@@ -45,17 +45,17 @@
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="right-swift" onclick="rightRound2();">
@@ -71,17 +71,17 @@
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel" style="filter: blur(5px);"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="panel-display" style="filter: blur(5px);">
                 <p class="title-carroussel"></p>
-                <img src="" class="img-carroussel" />
+                <p class="duration-carroussel"></p>
                 <p class="abstract-carroussel"></p>
             </div>
             <div class="right-swift" onclick="rightRound3();">
